test/corpus/signatures.txt
==================
Optional void return type
==================

func implicit() {}
func explicit() void {}
func answer() int {
    return 42
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block))
  (function_definition
    (identifier)
    (parameter_list)
    (void_type)
    (block))
  (function_definition
    (identifier)
    (parameter_list)
    (type
      (builtin_type))
    (block
      (statement
        (return_statement
          (expression
            (integer_literal)))))))

==================
Native standard function
==================

native func native_next() int

---

(source_file
  (native_function_declaration
    native: (identifier)
    name: (identifier)
    (parameter_list)
    return_type: (type
      (builtin_type))))

==================
Read reference signature and argument
==================

func inspect(value:@Data) {}
func apply(callback:func(@Data) int) {}
func main() {
    inspect(@data)
}

---

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (type
          (named_type
            (type_identifier)))))
    body: (block))
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (type
          (function_type
            (function_type_parameter
              type: (type
                (named_type
                  (type_identifier))))
            (type
              (builtin_type))))))
    body: (block))
  (function_definition
    name: (identifier)
    (parameter_list)
    body: (block
      (statement
        (expression_statement
          (invocation_expression
            target: (identifier)
            (expression
              (read_reference_expression
                operand: (expression
                  (identifier))))))))))
